--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,39 @@
 // Navigation Styles here
+header {
+    width: 100%;
+    border-bottom: 2px dashed @navigation-border;
+
+    .header {
+        display: flex;
+        justify-content: space-between;
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 3rem 0;
+        align-items: baseline;
+        transition: .3s all;
+
+        a {
+            text-decoration: none;
+            color: @font-color;
+            font-size: 1.6rem;
+            transition: .3s all;
+        }
+
+        .logo a {
+            font-family: 'Indie Flower', cursive;
+            font-size: 4rem;
+
+            &:hover {
+                font-size: 4.1rem;
+            }
+        }
+
+        .navbar a {
+            padding: 0 1.6rem;
+
+            &:hover {
+                font-size: 1.8rem;
+            }
+        }
+    }
+}
