--- a/css/index.css
+++ b/css/index.css
@@ -211,6 +211,13 @@ header .header .navbar a:hover {
   font-size: 1.6rem;
   padding: 20px;
 }
+.home .page-header {
+  padding-bottom: 1rem;
+  border-bottom: 2px dashed #C0C0C0;
+}
+.home .page-header h2 {
+  padding-top: 2rem;
+}
 .home .content-section {
   margin: 30px 0;
   display: flex;
