--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,4 +1,12 @@
 .home {
+  .page-header {
+    padding-bottom: 1rem;
+    border-bottom: 2px dashed @navigation-border;
+
+    h2 {
+      padding-top: 2rem;
+    }
+  }
 
   .content-section {
     margin: 30px 0;
@@ -6,8 +14,6 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
-    
     .text-content {
       width: 48%;
       padding-right: 1%;
