--- a/less/home-page.less
+++ b/less/home-page.less
@@ -62,6 +62,10 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      .btn {
+        .createButton(darken(@eastern-blue, 10%), @white)
+      }
     }
   }
 }// home
