--- a/less/navigation.less
+++ b/less/navigation.less
@@ -19,6 +19,13 @@ header {
             transition: .3s all;
         }
 
+        .logo {
+
+            @media @mobile {
+                margin-bottom: 1.5rem;
+            }
+        }
+
         .logo a {
             font-family: 'Indie Flower', cursive;
             font-size: 4rem;
@@ -34,6 +41,14 @@ header {
             &:hover {
                 font-size: 1.8rem;
             }
+
+        }
+
+        @media @mobile {
+            flex-direction: column;
+            align-items: center;
+            padding: 1.5rem 0;
+            justify-content: space-between;
         }
     }
 }
