--- a/less/mixins.less
+++ b/less/mixins.less
@@ -13,3 +13,9 @@
         background-color: darken(@bgColor, 5%);
     }
 }
+
+.fullWidthMobile() {
+    @media @mobile {
+        width: 100%;
+    }
+}
