--- a/less/navigation.less
+++ b/less/navigation.less
@@ -46,6 +46,10 @@ header {
                 font-size: 1.8rem;
             }
 
+            @media @mobile {
+                padding: 0 1rem;
+            }
+
         }
 
         @media @tablet {
